# med_ai_bot

./: README.md  pyproject.toml
med_ai_bot_1/: Jupyter.py  main.py
med_ai_bot_1/interface/: buttons.py
med_ai_bot_1/Задание второго этапа Сириус.ИИ/: 2.Жалобы.csv  4.Топ_10_Жалоб.txt
tests/: classs.py  m.txt  main (2).py  main_4.py  main_test.py
